[package]
name = "scf"
version = "0.1.0"
authors = ["Michael Yuan <michael@secondstate.io>"]
edition = "2018"

[dependencies]
wasm-bindgen = "=0.2.61"
base64 = "0.12.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "=1.0.44"
ssvm_process_interface = "0.1.3"
ssvm-wasi-helper = "=0.1.0"
image = "0.23.12"
